<resources>
    <string name="app_name">快看影视</string>

    <string name="title_section1">我的收藏</string>
    <string name="title_section2">设置</string>
    <string name="title_section3">意见反馈</string>
    <string name="title_section4">检查新版本</string>
    <string name="title_section5">关于我们</string>
    <string name="title_section6">暂无</string>
    <string name="title_section7">退出</string>
    <string name="video_list1">电视剧(8942)</string>
    <string name="video_list2">电影(23021)</string>
    <string name="video_list3">动漫(5479)</string>
    <string name="video_list4">综艺(7581)</string>
    <string name="video_list5">纪录片(6295)</string>
    <string name="video_list6">直播</string>
    <dimen name="Tab_width">100dp</dimen>
    <color name="theme_color">#088</color>
    <color name="actionbar_color">#FFFFFF</color>
    <color name="checked_color">@color/theme_color</color>
    <color name="unchecked_color">#000</color>

    <style name="navigation_Tab">
        <item name="android:layout_width">@dimen/Tab_width</item>
        <item name="android:layout_height">50dp</item>
        <item name="android:textColor">@color/color</item>
        <item name="android:button">@null</item>
        <item name="android:gravity">center</item>
        <item name="android:padding">0dp</item>

    </style>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">^_^</string>


    <string name="radiobutton1">推荐</string>
    <string name="radiobutton2">频道</string>
    <string name="radiobutton3">专题</string>
    <string name="radiobutton4">排行榜</string>
    <string name="actiontext">快看影视</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="title_activity_main_activity6">MainActivity6</string>
    <string name="title_activity_main_activity7">MainActivity7</string>
    <string name="title_activity_appstore">APPStoreActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_down_load">DownLoadActivity</string>
    <string name="title_activity_dian_shi">DianShiActivity</string>
    <string name="title_activity_move">MoveActivity</string>
    <string name="title_activity_dong_man">DongManActivity</string>
    <string name="title_activity_zong_yi">ZongYiActivity</string>
</resources>
