<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<include layout="@layout/main_head" />-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40.0dip"-->
        <!--android:background="#fff3f3f3"-->
        <!--android:orientation="horizontal" >-->

        <HorizontalScrollView
            android:id="@+id/navigation_tab"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!--<RelativeLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="horizontal">-->

                    <!--<RelativeLayout-->
                    <!--android:id="@+id/colum_image"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="40.0dp">-->

                    <!--<ImageView-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:visibility="gone"-->
                    <!--android:id="@+id/left_image"-->
                    <!--android:src="@drawable/ic_drawer"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_width="10dp"-->
                    <!--android:layout_height="40dp" />-->


                    <!--<ImageView-->
                    <!--android:id="@+id/right_image"-->
                    <!--android:src="@drawable/ic_drawer"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_width="10dp"-->
                    <!--android:layout_height="40dp" />-->

                    <!--</RelativeLayout>-->

                    <RadioGroup
                        android:id="@+id/navigation_radiogroup"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/navigation_tab0"
                            style="@style/navigation_Tab"
                            android:text="@string/radiobutton1" />

                        <RadioButton
                            android:id="@+id/navigation_tab1"
                            style="@style/navigation_Tab"
                            android:text="@string/radiobutton2" />

                        <RadioButton
                            android:id="@+id/navigation_tab2"
                            style="@style/navigation_Tab"
                            android:text="@string/radiobutton3" />

                        <RadioButton
                            android:id="@+id/navigation_tab3"
                            style="@style/navigation_Tab"
                            android:text="@string/radiobutton4" />

                    </RadioGroup>


                <!--</RelativeLayout>-->

                <View
                    android:id="@+id/navigation_selected"
                    android:layout_width="@dimen/Tab_width"
                    android:layout_height="4dp"
                    android:background="@color/theme_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/theme_color" />
            </LinearLayout>


        </HorizontalScrollView>

        <android.support.v4.view.ViewPager
            android:id="@+id/navigation_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            />


    </LinearLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

        <fragment
            android:id="@+id/navigation_drawer"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:name="myapplication.mobiletrain.com.myapplication.NavigationDrawerFragment"
            tools:layout="@layout/fragment_navigation_drawer">


        </fragment>



</android.support.v4.widget.DrawerLayout>
